2017-02-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/anytime.R (anydate, utcdate): Convert factor or ordered if needed

	* tests/simpleTests.R: New tests for anydate(), utcdate() and factors

	* R/init.R (.onLoad): Minor editing / refactoring

	* .travis.yml (before_install): Use https for curl fetch

2017-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version

	* src/anytime.cpp (convertToTime): Use Rcpp's new Date(time)Vector

	* DESCRIPTION: Vrsioned Imports and LinkingTo 'Rcpp (>= 0.12.9),
	use versioned Depends 'R (>= 3.2.0) to ensure versioned LinkingTo

2016-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.2.0

	* inst/NEWS.Rd: Finalized for release

	* test/bulkTest.R: New set of tests

2016-12-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version

	* R/formats.R (iso8601, rfc2822, rfc3339): New helper functions

	* man/iso8601.Rd: New documentation for the new functions

	* NAMESPACE: Exporting new functions

	* tests/simpleTests.R: New simple tests

	* tests/gh_issue_5.R: Skip two tests if on Windows

2016-12-22  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (anydate, utcdate): Ensure Date object is returned

2016-12-21  Dirk Eddelbuettel  <edd@debian.org>

	* tests/simpleTests.R: More tests
	* tests/gh_issue_5.R: Idem

2016-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* tests/allFormats.R: Significantly increased number of tests

2016-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* tests/bulkTest.R: Improved testing for POSIXct and Date
	* tests/gh_issue_12.R: Additional testing

2016-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* src/anytime.cpp (anytime_cpp): New option asDate
	(convertToTime): Idem
	(stringToTime): Idem
	(ptToDoubleUTC): Idem
	(ptToDouble): Idem
