@@ -1,8 +1,8 @@
 Package: anytime
 Type: Package
 Title: Anything to 'POSIXct' or 'Date' Converter
-Version: 0.2.0.2
-Date: 2017-02-03
+Version: 0.2.0.3
+Date: 2017-02-04
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: Convert input in any one of character, integer, numeric, factor,
@@ -16,4 +16,4 @@ Depends: R (>= 3.2.0)
 Imports: Rcpp (>= 0.12.9)
 LinkingTo: Rcpp (>= 0.12.9), BH
 Suggests: gettz
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.0
